<resources>
    <string name="app_name">How many calories?</string>

    <string name="offline_title">Your device is offline</string>
    <string name="offline_text">Please connect to the internet. The app needs connectivity to function.</string>

    <string name="subscription_title">Subscription</string>
    <string name="subscription_text">You will be charged monthly until you cancel your subscription. </string>
    <string name="subscription_benefits_title">Benefits</string>
    <string name="subscription_benefits">&#8226; No more Ads\n&#8226; Full nutritional information\n&#8226; Every new feature will be included</string>
    <string name="subscription_button">Buy now</string>

    <string name="text_no_ads">No more ADS</string>
    <string name="text_manage_subscription">Subscription</string>

    <string name="question">Try entering a food,\ndish or even a list of ingredients</string>
    <string name="question_button">How many calories?</string>
    <string name="answer">answer will show here</string>
    <string name="empty">Empty field :-(</string>

    <string name="serving">Serving size:&#160;&#160;*</string>
    <string name="items">Sugar\nFiber\nSodium\nPotassium\nSaturated fat\nTotal fat\nCholesterol\nCarbohydrates\nProtein</string>
    <string name="no_value">*\n*\n*\n*\n*\n*\n*\n*\n*</string>
    <string name="results">Results</string>
    <string name="saved">Saved</string>
    <string name="save">Save</string>

    <string name="working">Working…</string>
    <string name="not_found">Not found :(</string>
    <string name="something_wrong">Something went wrong :(</string>

    <string name="results_empty">After entering a food, dish or ingredients in the field above and tapping the \"How many calories?\" button, the results will show here.</string>
    <string name="saved_empty">In each item in the Results tab, when you tap the \"Save\" button the item will be stored here for later access.</string>
    <string name="enter_items_here">enter items here</string>

</resources>